[package]
name = "kuriboh"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
rand = "0.9.1"
user32-sys = "0.2.0"
winapi = {version = "0.3.9", features = ["winuser"] }

[dependencies.windows]
version = "0.61"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
]


